--- a/DirectoryPermissionsChecker/DirectoryPermissionTool.csproj
+++ b/DirectoryPermissionsChecker/DirectoryPermissionTool.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FE589BA1-E349-40D4-AFE3-2B9EC5A01FF8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DirectoryPermissionsChecker</RootNamespace>
-    <AssemblyName>DirectoryPermissionsChecker</AssemblyName>
+    <RootNamespace>DirectoryPermissionTool</RootNamespace>
+    <AssemblyName>DirectoryPermissionTool</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -18,16 +18,16 @@
     <PublishUrl>\\kng1fsmf01\Public\ITCOOP2016\DirectoryPermissionsChecker\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ProductName>Directory Permissions Checker</ProductName>
+    <ProductName>Directory Permission Tool</ProductName>
     <PublisherName>IT Tools</PublisherName>
-    <ApplicationRevision>2</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -113,7 +113,10 @@
     <Compile Include="AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PermissionsChecker.cs" />
+    <Compile Include="DirectoryPermissionsFormatter.cs" />
+    <Compile Include="DirectoryInfoGetter.cs" />
+    <Compile Include="DirectoryPermissionsChecker.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="AboutWindow.xaml">
       <SubType>Designer</SubType>
