--- a/DirectoryPermissionsChecker/MichaelBrandonMorris.DirectoryPermissionTool.csproj
+++ b/DirectoryPermissionsChecker/MichaelBrandonMorris.DirectoryPermissionTool.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{FE589BA1-E349-40D4-AFE3-2B9EC5A01FF8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DirectoryPermissionTool</RootNamespace>
+    <RootNamespace>MichaelBrandonMorris.DirectoryPermissionTool</RootNamespace>
     <AssemblyName>DirectoryPermissionTool</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -25,9 +25,10 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <TargetCulture>en</TargetCulture>
     <ProductName>Directory Permission Tool</ProductName>
     <PublisherName>IT Tools</PublisherName>
-    <ApplicationRevision>15</ApplicationRevision>
+    <ApplicationRevision>19</ApplicationRevision>
     <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -82,6 +83,13 @@
       <HintPath>..\packages\MvvmLightLibs.5.3.0.0\lib\net45\GalaSoft.MvvmLight.Platform.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MichaelBrandonMorris.DynamicText, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\MichaelBrandonMorris.DynamicText\MichaelBrandonMorris.DynamicText\bin\Release\MichaelBrandonMorris.DynamicText.dll</HintPath>
+    </Reference>
+    <Reference Include="MichaelBrandonMorris.ValueConverters">
+      <HintPath>..\..\ValueConverters\ValueConverters\bin\Debug\MichaelBrandonMorris.ValueConverters.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
@@ -104,9 +112,6 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="ValueConverters">
-      <HintPath>..\..\ValueConverters\ValueConverters\bin\Debug\ValueConverters.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -119,8 +124,6 @@
     <Compile Include="AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DynamicDirectoryPath.cs" />
-    <Compile Include="DynamicText.cs" />
     <Compile Include="PermissionInfo.cs" />
     <Compile Include="PermissionInfoFormatter.cs" />
     <Compile Include="PermissionGetter.cs" />
